kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
      - name: welcome-app
        image: aamdsam/sltr-devops-testing:latest
        ports:
        - containerPort: 5000
